recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:3: error: not found: value pentagonSide
    pentagonSide(levels - 1, length*0.4)
    ^PentaKoch:5: error: not found: value pentagonSide
    pentagonSide(levels - 1, length*0.4)
    ^PentaKoch:7: error: not found: value pentagonSide
    pentagonSide(levels - 1, length*0.4)
    ^PentaKoch:9: error: not found: value pentagonSide
    pentagonSide(levels - 1, length*0.4)
    ^PentaKoch:11: error: not found: value pentagonSide
    pentagonSide(levels - 1, length*0.4)
    ^PentaKoch:20: error: not found: value pentaKoch
		pentaKoch(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^