recursion.logo.koch.PentaKoch.scala.code
def pentagonKoch(levels:Int, length:Double) {
  if (levels > 0) {
    pentagonSide(levels - 1, length*0.4)
    gauche(108)
    pentagonSide(levels - 1, length*0.4)
    droite(72)
    pentagonSide(levels - 1, length*0.4)
    droite(72)
    pentagonSide(levels - 1, length*0.4)
    droite(72)
    pentagonSide(levels - 1, length*0.4)
    gauche(108)
  } else {
    avance(length)
  }
}